--- a/styles/weather-main.css
+++ b/styles/weather-main.css
@@ -4,7 +4,8 @@ body {
 #nav {
   background: var(--navground); 
   transition: 0.3s; 
-  position: fixed;
+  position: --webkit-sticky;
+  position: sticky; 
   top: 0;
   z-index: 5; 
 }
